--- a/CI/gitlab-ci/linux-template-build-job.yml
+++ b/CI/gitlab-ci/linux-template-build-job.yml
@@ -7,14 +7,8 @@
 
 build-{{BUILDTYPE}}-{{COMPILER}}-{{LANGUAGE}}-{{QT_VERSION}}:
   stage: build
-  script: "CI/ci-linux-build.sh {{COMPILER}} {{LANGUAGE}} {{BUILDTYPE}}"
+  script: "CI/ci-linux-build.sh {{COMPILER}} {{LANGUAGE}} {{BUILDTYPE}} {{QT_VERSION}}"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  variables:
-    COMPILER: "{{COMPILER}}"
-    LANGUAGE: "{{LANGUAGE}}"
-    QTVERSION: "{{QT_VERSION}}"
-    BUILDTYPE: "{{BUILDTYPE}}"
-    GIT_SUBMODULE_STRATEGY: recursive
   tags:
     - Linux
     - stretch
