--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ build-debug-gcc-cpp11-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-gcc-cpp11-debug-qt5.15.1-Vector-Checks/
+    - build-gcc-cpp11-qt5.15.1-debug/
 
 #-----------  Job Informations:
 # Type:       Test: debug
@@ -69,9 +69,9 @@ test-debug-gcc-cpp11-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-gcc-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-gcc-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-gcc-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-gcc-cpp11-qt5.15.1-debug/Unittests/report.xml
+        - build-gcc-cpp11-qt5.15.1-debug/Unittests/report-customvec.xml
+        - build-gcc-cpp11-qt5.15.1-debug/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -90,7 +90,7 @@ build-release-gcc-cpp11-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-gcc-cpp11-release-qt5.15.1-Vector-Checks/
+    - build-gcc-cpp11-qt5.15.1-release/
 
 #-----------  Job Informations:
 # Type:       Test: release
@@ -111,9 +111,9 @@ test-release-gcc-cpp11-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-gcc-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-gcc-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-gcc-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-gcc-cpp11-qt5.15.1-release/Unittests/report.xml
+        - build-gcc-cpp11-qt5.15.1-release/Unittests/report-customvec.xml
+        - build-gcc-cpp11-qt5.15.1-release/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -132,7 +132,7 @@ build-debug-clang-cpp11-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-clang-cpp11-debug-qt5.15.1-Vector-Checks/
+    - build-clang-cpp11-qt5.15.1-debug/
 
 #-----------  Job Informations:
 # Type:       Test: debug
@@ -153,9 +153,9 @@ test-debug-clang-cpp11-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-clang-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-clang-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-clang-cpp11-debug-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-clang-cpp11-qt5.15.1-debug/Unittests/report.xml
+        - build-clang-cpp11-qt5.15.1-debug/Unittests/report-customvec.xml
+        - build-clang-cpp11-qt5.15.1-debug/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -174,7 +174,7 @@ build-release-clang-cpp11-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-clang-cpp11-release-qt5.15.1-Vector-Checks/
+    - build-clang-cpp11-qt5.15.1-release/
 
 #-----------  Job Informations:
 # Type:       Test: release
@@ -195,9 +195,9 @@ test-release-clang-cpp11-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-clang-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-clang-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-clang-cpp11-release-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-clang-cpp11-qt5.15.1-release/Unittests/report.xml
+        - build-clang-cpp11-qt5.15.1-release/Unittests/report-customvec.xml
+        - build-clang-cpp11-qt5.15.1-release/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -216,7 +216,7 @@ build-debug-gcc-cpp14-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-gcc-cpp14-debug-qt5.15.1-Vector-Checks/
+    - build-gcc-cpp14-qt5.15.1-debug/
 
 #-----------  Job Informations:
 # Type:       Test: debug
@@ -237,9 +237,9 @@ test-debug-gcc-cpp14-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-gcc-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-gcc-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-gcc-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-gcc-cpp14-qt5.15.1-debug/Unittests/report.xml
+        - build-gcc-cpp14-qt5.15.1-debug/Unittests/report-customvec.xml
+        - build-gcc-cpp14-qt5.15.1-debug/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -258,7 +258,7 @@ build-release-gcc-cpp14-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-gcc-cpp14-release-qt5.15.1-Vector-Checks/
+    - build-gcc-cpp14-qt5.15.1-release/
 
 #-----------  Job Informations:
 # Type:       Test: release
@@ -279,9 +279,9 @@ test-release-gcc-cpp14-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-gcc-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-gcc-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-gcc-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-gcc-cpp14-qt5.15.1-release/Unittests/report.xml
+        - build-gcc-cpp14-qt5.15.1-release/Unittests/report-customvec.xml
+        - build-gcc-cpp14-qt5.15.1-release/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -300,7 +300,7 @@ build-debug-clang-cpp14-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-clang-cpp14-debug-qt5.15.1-Vector-Checks/
+    - build-clang-cpp14-qt5.15.1-debug/
 
 #-----------  Job Informations:
 # Type:       Test: debug
@@ -321,9 +321,9 @@ test-debug-clang-cpp14-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-clang-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-clang-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-clang-cpp14-debug-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-clang-cpp14-qt5.15.1-debug/Unittests/report.xml
+        - build-clang-cpp14-qt5.15.1-debug/Unittests/report-customvec.xml
+        - build-clang-cpp14-qt5.15.1-debug/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -342,7 +342,7 @@ build-release-clang-cpp14-qt5.15.1:
     - stretch
   artifacts:
     paths:
-    - build-clang-cpp14-release-qt5.15.1-Vector-Checks/
+    - build-clang-cpp14-qt5.15.1-release/
 
 #-----------  Job Informations:
 # Type:       Test: release
@@ -363,9 +363,9 @@ test-release-clang-cpp14-qt5.15.1:
   artifacts:
     reports:
       junit:
-        - build-clang-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report.xml
-        - build-clang-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report-customvec.xml
-        - build-clang-cpp14-release-qt5.15.1-Vector-Checks/Unittests/report-doublevec.xml
+        - build-clang-cpp14-qt5.15.1-release/Unittests/report.xml
+        - build-clang-cpp14-qt5.15.1-release/Unittests/report-customvec.xml
+        - build-clang-cpp14-qt5.15.1-release/Unittests/report-doublevec.xml
 
 
 
